# software-dev-control-plane

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
agents/: architect.md  implementation_engineer.md  product_engineer.md  reality_check_reviewer.md  security_reviewer.md  validation_engineer.md
docs/: AGENT_CONTROL_MODEL.md  ARCHITECTURE.md  CODE_REVIEW_CHECKLIST.md  DESIGN_REVIEW_CHECKLIST.md  EMPLOYER_OVERVIEW.md  ENGINEERING_QUALITY_REQUIREMENTS.md  GENERATORS.md  GOVERNANCE.md  HOW_TO_USE.md  PUBLIC_DISCLOSURE_BOUNDARY.md  QUALITY_WORKFLOW.md  REVIEWER_GUIDE.md  TARGET_TEMPLATES.md
governance/: KISS_AND_ALGORITHMIC_EFFICIENCY.md
projects/example_project/: project.yaml  roadmap.yaml
projects/leetcode_rotated_search/: project.yaml
schemas/: project.schema.yaml  task.schema.yaml
skills/: README.md
skills/agent-handoff/: SKILL.md
skills/algorithmic-efficiency/: SKILL.md
skills/code-quality-comments/: SKILL.md
skills/context-management/: SKILL.md
skills/kiss-engineering/: SKILL.md
skills/quality-gates/: SKILL.md
skills/repository-safety/: SKILL.md
skills/task-execution/: SKILL.md
src/control_plane/: __init__.py  cli.py  (+5 more)
templates/: CONTROL_PLANE.md  FINAL_HANDOFF.md
templates/project_types/cpp_cli/files/: .gitignore  CMakeLists.txt  CONTROL_PLANE.md  README.md
templates/project_types/cpp_cli/files/src/: main.cpp
templates/project_types/cpp_cli/files/tests/: test_smoke.cpp
templates/project_types/python_package/files/: CONTROL_PLANE.md  README.md  pyproject.toml
templates/project_types/python_package/files/src/{{package_name}}/: __init__.py  main.py
templates/project_types/python_package/files/tests/: test_smoke.py
tests/: test_employer_docs.py  test_generators.py  test_governance.py  test_manifest.py  test_skills.py  test_templates.py  test_validation.py
(+6 files in other folders)
